--- a/UI/Main.html
+++ b/UI/Main.html
@@ -4,7 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>IMOVI Encryption</title>
-
+    
+    <!-- JS Scrips -->
+    <script src="qrcode.min.js"></script>
     <script src="eel.js"></script>
     <script src="Main.js"></script>
 
@@ -198,6 +200,48 @@
               </div>
             </div>
         </div>
+        <div class="modal fade" id="info_del_name" tabindex="-1" role="dialog" aria-labelledby="Error_pass_title" aria-hidden="true">
+          <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="Error_pass_title"><i class="fas fa-exclamation-circle"></i> Info</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
+                  <h3 id="Error_pass_text">Public key deleted!!!</h3>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+              </div>
+            </div>
+          </div>
+      </div>
+
+        <!-- Table Modal Window -->
+        <div class="modal fade" id="table_item_modal" tabindex="-1" role="dialog" aria-labelledby="table_item_title" aria-hidden="true">
+          <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="table_item_title"><i class="fas fa-key"></i></i> Key Info</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
+                  <h3 id="table_item_text"></h3>
+                  <div id="QRcode_pubKey"></div>
+                  <input readonly class="form-control" id="pubKey_textarea_modal"/>
+              </div>
+              <div class="modal-footer">
+                <button type="button" id="table_item_del" class="btn btn-danger"><i class="fas fa-trash"></i> Delete Key</button>
+                <button type="button" class="btn btn-success" onclick="qrCode_modal_copy()"><i class="fas fa-copy"></i> Copy</button>
+                <button type="button" class="btn btn-secondary" data-dismiss="modal"><i class="fas fa-times"></i> Close</button>
+              </div>
+            </div>
+          </div>
+      </div>
 
         <div class="row">
             <div class="col-3">
@@ -225,13 +269,6 @@
                                 <input type="text" class="form-control" id="Add_PubKey" placeholder="Public key">
                             </div>
                             <button type="button" class="btn btn-success mb-2" onclick=add_friend_key()><i class="fas fa-plus"></i> Add Friend</button>
-                        </form>
-                        <form id="delFriend_form" class="form-inline">
-                            <div class="form-group mb-2">
-                                <label for="Del_Nickname" class="sr-only">Nickname</label>
-                                <input type="text" class="form-control" id="Del_Nickname" placeholder="Nickname">
-                            </div>
-                            <button type="button" class="btn btn-danger mb-2 mx-sm-3" onclick=del_friend_key()><i class="fas fa-trash-alt"></i> Delete Friend</button>
                         </form>
                         <table id="Friends_list_table" class="table table-dark">
                             <thead>
