--- a/UI/Main.html
+++ b/UI/Main.html
@@ -396,18 +396,18 @@
                             </div>
                             <div class="modal-body">
                               <form>
-                                <div class="form-group">
+                                <div class="form-group" style="margin-bottom: 0;">
                                   <h5 id="GeneralTitle">General</h5>
                                   <table>
-                                    <tr>
-                                      <td> <label class="first_labels" for="exampleInput1">Nickname:</label></td>
+                                    <tr class="settings_tr">
+                                      <td><label class="first_labels" for="exampleInput1">Nickname:</label></td>
                                       <td><input type="nickname" class="form-control" id="exampleInputNickname" aria-describedby="nicknameHelp" placeholder="New Nickname"></td>
                                     </tr>
                                   </table>
                                 </div>
                                 <div class="form-group">
                                   <table>
-                                    <tr>
+                                    <tr class="settings_tr">
                                       <td><label class = "label" for="exampleInputPassword1">Password:</label></td>
                                       <td>\<input type="password" class="form-control" id="exampleInputPassword" placeholder="New Password"></td>
                                     </tr>
@@ -418,23 +418,23 @@
                                 <div class="form-group">
                                   <h5 id="PrivateKeyTitle">Private Key</h5>
                                   <table>
-                                    <tr>
+                                    <tr class="settings_tr">
                                       <td><label class="first_labels" id = "key_size" for="Key_size">Key size:  </label></td>
-                                      <td><input type="key" class="form-control" id="KeySizeConst" aria-describedby="keyHelp" placeholder="2024" disabled="disabled"></td>
+                                      <td><input type="key" class="form-control" id="KeySizeConst" aria-describedby="keyHelp" placeholder="2048" disabled="disabled"></td>
                                     </tr>
                                   </table>
                                   </div>
                                 <div class="form-group">
                                   <table>
-                                    <tr>
+                                    <tr class="settings_tr">
                                       <td><label class = "label" id="KeyHashAlert" for="exampleInputPassword1">Key Hash:</label></td>
-                                      <td><input type="password" class="form-control" id="KeyHash" placeholder=".......Key Hash.........." disabled="disabled"></td>
+                                      <td><input readonly type="password" class="form-control" id="KeyHash" placeholder=".......Key Hash.........."></td>
                                     </tr>
                                   </table>
                                 </div>
                                 <div class="form-group">
                                   <table>
-                                    <tr>
+                                    <tr class="settings_tr">
                                       <td><label class = "label" for="PrivateKeyInfo">Private Key:</label></td>
                                       <td><button type="button" id="regenerate_button" class="btn btn-success">Regenerate</button></td>
                                       <td><button type="button" id="import_button" class="btn btn-danger">Export key</button></td>
@@ -446,9 +446,9 @@
                                 <div class="form-group">
                                   <h5 id="TelegramBotTitle">Telegram Bot</h5>
                                   <table>
-                                    <tr>
+                                    <tr class="settings_tr">
                                       <td><label class="first_labels" for="Key_size">Api Id:</label></td>
-                                      <td><input type="key" id = "bot_api" class="form-control" id="KeySizeConst" aria-describedby="keyHelp" placeholder=".......Api......." disabled="disabled"></td>
+                                      <td><input type="key" id = "bot_api" class="form-control" id="KeySizeConst" aria-describedby="keyHelp" placeholder=".......Api......."></td>
                                     </tr>
                                   </table>
                                 </div>
