Добавив додаткові поля для бота в налаштуваннях

--- a/UI/Main.html
+++ b/UI/Main.html
@@ -306,8 +306,26 @@
                   <h5 id="TelegramBotTitle">Telegram Bot</h5>
                   <table>
                     <tr class="settings_tr">
-                      <td><label class="first_labels" for="Key_size">Api Id:</label></td>
-                      <td><input type="key" id = "bot_api" class="form-control" id="KeySizeConst" aria-describedby="keyHelp" placeholder=".......Api......."></td>
+                      <td><label class="first_labels" id="Api_Tittle" for="Api_id">Api Id:</label></td>
+                      <td><input type="key" id = "bot_api" class="form-control" aria-describedby="keyHelp" placeholder=".......Api......."></td>
+                    </tr>
+                  </table>
+                  <table>
+                    <tr class="settings_tr">
+                      <td><label class="first_labels" for="api_hash">Api Hash:</label></td>
+                      <td><input type="key" class="form-control" id = "bot_api_hash" aria-describedby="keyHelp" placeholder=".......api_hash....."></td>
+                    </tr>
+                  </table>
+                  <table>
+                    <tr class="settings_tr">
+                      <td><label class="first_labels" for="bot_password">Password:</label></td>
+                      <td><input type="key" class="form-control" id = "bot_password" aria-describedby="keyHelp" placeholder=".......Password....."></td>
+                    </tr>
+                  </table>
+                  <table>
+                    <tr class="settings_tr">
+                      <td><label class="first_labels" for="phone_number">Phone:</label></td>
+                      <td><input type="key" class="form-control" id = "phone_number" aria-describedby="keyHelp" placeholder=".....number...."></td>
                     </tr>
                   </table>
                 </div>
