Додав статус бота

--- a/UI/Main.html
+++ b/UI/Main.html
@@ -329,6 +329,12 @@
                       <td><input type="key" class="form-control" id = "api_phone" aria-describedby="keyHelp" placeholder=".....number...."></td>
                     </tr>
                   </table>
+                  <table>
+                    <tr class="settings_tr">
+                      <td><label class="first_labels" for="start_bot">Status:</label></td>
+                      <td> <button type="button" class="btn btn-start_bot">Start</button></td>
+                    </tr>
+                  </table>
                 </div>
               </form>
             </div>
